# rusteric

./: Cargo.toml  README.md  main
src/: main.rs  matrix.rs
src/operations/: arithmetic.rs  determinant.rs  echelon.rs  inverse.rs  lu.rs  mod.rs  row_ops.rs  transpose.rs
tests/: arithmetic_tests.rs  determinant_tests.rs  echelon_tests.rs  inverse_tests.rs  lu_tests.rs  row_ops_tests.rs  transpose_tests.rs
tests/arithmetic/: multiplication_tests.rs  scalar_tests.rs  subtraction_tests.rs
